# roguelike-tutorial-cpp

./: CMakeLists.txt  LICENSE  README.md  build.bat  notes.txt  vcpkg.json
01_Drawing_map_player_and_input/: CMakeLists.txt
01_Drawing_map_player_and_input/src/: game.cpp  game.h  graphics.cpp  graphics.h  level.cpp  level.h  main.cpp
01_Drawing_map_player_and_input/src/state/: maingame.cpp
02_Creature_entities_and_movement/: CMakeLists.txt
02_Creature_entities_and_movement/src/: db.h  game.h  graphics.cpp  signals.h
02_Creature_entities_and_movement/src/state/: maingame.cpp  maingame.h  state.cpp
03_User_interface/: CMakeLists.txt  README.md
03_User_interface/src/: commands.cpp  entity.cpp  graphics.cpp  graphics.h  json.h  level.cpp  level.h
04_Field_of_vision/: CMakeLists.txt
04_Field_of_vision/src/: db.cpp  entity.h
04_Field_of_vision/src/state/: maingame.cpp
05_Object_entities/: CMakeLists.txt
05_Object_entities/src/: astar.cpp  commands.cpp  commands.h  db.cpp  db.h  entity.cpp  entity.h  game.cpp  game.h  json.cpp  level.cpp
05_Object_entities/src/state/: maingame.cpp  state.h
06_Delving_into_the_dungeon/: CMakeLists.txt
06_Delving_into_the_dungeon/src/: commands.h  db.h  dungen.cpp  entity.h  game.cpp  json.h  main.cpp
06_Delving_into_the_dungeon/src/state/: maingame.cpp  maingame.h
07_Game_states/: CMakeLists.txt
07_Game_states/src/: commands.cpp  entity.cpp  entityid.h  game.h  graphics.cpp  json.cpp  level.cpp  tilemap.cpp
07_Game_states/src/state/: inventory.cpp  menu.cpp
08_Item_entities_and_inventory/: CMakeLists.txt
08_Item_entities_and_inventory/src/: commands.cpp  commands.h  db.cpp  entity.h  json.cpp  json.h  level.h
08_Item_entities_and_inventory/src/state/: inventory.cpp  inventory.h  maingame.cpp  state.h
09_Equipment_consumables_and_effects/: CMakeLists.txt
09_Equipment_consumables_and_effects/src/: commands.cpp  entity.h  game.cpp  game.h  graphics.cpp  grid.h  json.cpp  json.h  turn.cpp  turn.h
09_Equipment_consumables_and_effects/src/state/: menu.h
10_GUI_driven_actions_and_turns/: CMakeLists.txt
10_GUI_driven_actions_and_turns/src/: entity.cpp  json.cpp
10_GUI_driven_actions_and_turns/src/state/: inventory.cpp  inventory.h  maingame.cpp  menu.cpp
11_Saving_and_loading/: CMakeLists.txt
11_Saving_and_loading/src/: graphics.h  signals.cpp
11_Saving_and_loading/src/state/: maingame.cpp
12_Finishing_touches/: CMakeLists.txt  README.md  commands.cpp  db.h  effect.h  entityid.cpp  game.h  sparsebuffer.cpp  spritemap.cpp  tilemap.h
12_Finishing_touches/src/: astar.h  db.cpp  dungen.h  entity.h  graphics.h  grid.cpp  json.h
12_Finishing_touches/src/state/: createchar.h  maingame.h  menu.cpp  menu.h  selecttarget.cpp
12_Finishing_touches/state/: createchar.cpp  menu.cpp
1_Basics/: 1_Basics.cpp  CMakeLists.txt  main_ex.cpp  notes.txt
X_final/: CMakeLists.txt  action.cpp  action.h  astar.cpp  astar.h  commands.cpp  commands.h  db.cpp  db.h  dungen.cpp  dungen.h  effect.cpp  effect.h  entity.cpp  entity.h  entityid.cpp  entityid.h  eventhandlers.cpp  eventhandlers.h  fov.cpp  fov.h  game.cpp  game.h  gamestate.h  graphics.cpp  graphics.h  grid.h  inventory.cpp  inventory.h  json.cpp  json.h  level.cpp  level.h  main.cpp  player.cpp  signals.cpp  signals.h  sparsebuffer.cpp  sparsebuffer.h  spritemap.cpp  (+5 more)
X_final/state/: createchar.cpp  createchar.h  death.cpp  death.h  inventory.cpp  inventory.h  maingame.cpp  maingame.h  menu.cpp  menu.h  ranged.cpp  ranged.h  selecttarget.cpp  selecttarget.h  state.cpp  state.h
docs/: _config.yml
docs/_posts/: 2022-05-23-welcome-to-jekyll.markdown
framework/: CMakeLists.txt  array2d.h  framework.cpp  framework.h  input.cpp  input.h  shader.h  utility.cpp  utility.h
media/json/: bg.json  db.json  db_no_attack_range.json  db_no_effects_stats.json  db_no_items.json  db_no_objects.json
media/maps/: map0.txt  map1.txt  map2.txt  map3.txt  map4.txt  starting_map.txt
media/misc/: titlescreen.txt
media/shaders/: 0_Framework.frag  0_Framework.vert  tilemap_dense.frag  tilemap_dense_nofow.frag  tilemap_dense_nofow.vert  tilemap_sparse.frag  tilemap_sparse_gui.vert  tilemap_sparse_gui_highlight.vert  tilemap_sparse_guih.frag  tilemap_sparse_nofow.frag  tilemap_sparse_nofow.vert
test/: CMakeLists.txt  test.cpp
